Change wrapper to inline-block to prevent vertical shifting

--- a/styles.css
+++ b/styles.css
@@ -322,6 +322,8 @@ header h1 {
 
 .output-area .blank-button-wrapper {
     white-space: normal;
+    display: inline-block;
+    vertical-align: baseline;
 }
 
 .output-section:fullscreen {
